# ComfyUI_Sapiens

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  sapiens_node.py  utils.py  workflow.json  workflow1021.json
Sapiens_Pytorch/: __init__.py  classes_and_palettes.py  common.py  depth.py  detector.py  normal.py  onnx_export.py  pose.py  predictor.py  segmentation.py
example_workflows/: sapiens.json  workflow.json
sapiens/: __init__.py  classes_and_palettes.py  predictor.py  registry.py  version.py
sapiens/backbones/: __init__.py  sapiens.py  sapiens2.py
sapiens/backbones/standalone/: sapiens.py  sapiens2.py
sapiens/dense/: __init__.py
sapiens/dense/scripts/demo/: albedo.sh  matting.sh  normal.sh  pointmap.sh  seg.sh
sapiens/dense/src/: __init__.py
sapiens/dense/src/datasets/: __init__.py
sapiens/dense/src/evaluators/: __init__.py  albedo_evaluator.py  matting_evaluator.py  normal_evaluator.py  pointmap_evaluator.py  seg_evaluator.py
sapiens/dense/tools/: dist_test.sh  test.py  train.py
sapiens/engine/: __init__.py  config.py  logger.py
sapiens/engine/datasets/: __init__.py  base_dataset.py  combined_dataset.py
sapiens/engine/evaluators/: __init__.py  base_evaluator.py  eval_collate.py
sapiens/engine/models/: __init__.py  base_model.py
sapiens/engine/optim/: __init__.py  lr_scheduler.py  optimizer.py
sapiens/engine/runners/: __init__.py  base_runner.py
sapiens/engine/visualizers/: __init__.py  base_visualizer.py
sapiens/pose/src/: __init__.py
sapiens/pose/tools/: dist_train.sh  test.py  train.py
(+149 files in other folders)
