[project]
name = "comfyui_sapiens"
description = "You can call Using Sapiens or Sapiens2 to get seg，normal，pose，depth，mask,albedo，pointmap"
version = "2.0.1"
license = { file = "LICENSE" }
dependencies = ["torch", "torchvision", "opencv-python", "#cap_from_youtube", "#imread_from_url", "ultralytics","termcolor","prettytable", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_Sapiens"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_Sapiens"
Icon = ""
